Security_groups/alb_rules.tf
# resource "aws_security_group_rule" "alb_ingress_http" {
#   type              = "ingress"
#   from_port         = 3100
#   to_port           = 3100
#   protocol          = "tcp"
#   cidr_blocks       = ["0.0.0.0/0"]
#   security_group_id = aws_security_group.dev_alb.id
# }

# resource "aws_security_group_rule" "alb_ingress_https" {
#   type              = "ingress"
#   from_port         = 443
#   to_port           = 443
#   protocol          = "tcp"
#   cidr_blocks       = ["0.0.0.0/0"]
#   security_group_id = aws_security_group.dev_alb.id
# }

# resource "aws_security_group_rule" "alb_ingress_rds" {
#   type                     = "ingress"
#   from_port                = 3306
#   to_port                  = 3306
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.dev_rds_sg.id
#   security_group_id        = aws_security_group.dev_alb.id
# }
